--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@metamask/sdk": "^0.33.1",
     "@supabase/supabase-js": "^2.57.4",
     "@types/node": "^24.5.2",
+    "axios": "^1.12.2",
+    "ethers": "^6.15.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
