--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,9 @@ services:
     name: agri-backend
     env: node
     plan: free
-    buildCommand: "npm ci"
-    startCommand: "npm start"
-rootDir: agri-blockchain-backend
+    rootDir: agri-blockchain-backend
+    buildCommand: npm ci
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
@@ -16,9 +16,9 @@ rootDir: agri-blockchain-backend
     name: agri-payments-backend
     env: node
     plan: free
-    buildCommand: "npm ci"
-    startCommand: "npm start"
-rootDir: blockchain-payment-backend
+    rootDir: blockchain-payment-backend
+    buildCommand: npm ci
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
