feat(render): containerize both backends, add /contracts endpoints, Node 20 Dockerfiles, render.yaml, and env examples; fix OZ v5 + ethers v6 deploy; add service stubs to avoid runtime errors

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Vite environment variables for local development
-# Set your backend API base URLs here. These are consumed by src/apiConfig.ts
+# Set your backend API base URLs here. These are consumed by src/apiConfig.ts and services/apiService.ts
 
 VITE_AGRI_BLOCKCHAIN_API_URL=http://localhost:5000/api
 VITE_PAYMENT_API_URL=http://localhost:5001/api
+# Legacy/global API base used by ApiService (if not using the split URLs above)
+VITE_API_URL=http://localhost:5001
