--- a/blockchain-payment-backend/env.example
+++ b/blockchain-payment-backend/env.example
@@ -1,7 +1,7 @@
 # =====================
 # Server Configuration
 # =====================
-NODE_ENV=development
+NODE_ENV=production
 PORT=5001
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000
 
@@ -15,9 +15,47 @@ MONGODB_URI=mongodb+srv://username:password@cluster0.mongodb.net/blockchain-paym
 # =====================
 JWT_SECRET=your-super-secret-jwt-key-for-payments
 JWT_EXPIRE=7d
+JWT_COOKIE_EXPIRE=30
 
 # =====================
-# Blockchain Configuration (Polygon Network)
+# Blockchain Configuration
 # =====================
-PRIVATE_KEY=your-deployment-private-key
-POLYGONSCAN_API_KEY=your-polygonscan-api-key
+# Select network and RPC.
+# If deploying/using Polygon Amoy testnet:
+BLOCKCHAIN_NETWORK=polygon-amoy
+RPC_URL=https://rpc-amoy.polygon.technology
+# If using Mumbai instead, override with a Mumbai RPC (Infura/Alchemy) and change BLOCKCHAIN_NETWORK accordingly
+# MUMBAI_RPC_URL=https://polygon-mumbai.infura.io/v3/YOUR_INFURA_PROJECT_ID
+
+# Deployed contracts (fill with your addresses)
+CONTRACT_ADDRESS=0xYOUR_PAYMENT_CONTRACT
+CROP_NFT_CONTRACT_ADDRESS=0xYOUR_CROP_NFT_CONTRACT
+
+# Signer private key for on-chain ops (NEVER commit real value)
+WALLET_PRIVATE_KEY=0xYOUR_PRIVATE_KEY
+# For Hardhat verification (optional)
+POLYGONSCAN_API_KEY=your_polygonscan_key
+
+# =====================
+# IPFS Configuration (used by services/ipfsService.js)
+# =====================
+# Option A: Local/daemon
+IPFS_HOST=localhost
+IPFS_PORT=5001
+IPFS_PROTOCOL=http
+# Option B: Infura (recommended on Render). When INFURA_PROJECT_ID/SECRET are set, code auto-uses Infura
+INFURA_PROJECT_ID=your_infura_project_id
+INFURA_PROJECT_SECRET=your_infura_project_secret
+IPFS_GATEWAY=https://ipfs.io/ipfs
+
+# =====================
+# Frontend URL (used in NFT metadata links)
+# =====================
+FRONTEND_URL=https://your-frontend.example.com
+
+# ---------------------
+# Notes
+# - For your current deployment on Amoy, you can use:
+#   CONTRACT_ADDRESS=0xBD22F5397b3c0c2c2A107e679eE378bB0B5d5dd1
+#   CROP_NFT_CONTRACT_ADDRESS=0x88264E2eEa95B5f90Ae9Dc1d4A778A61a4656f04
+# ---------------------
