--- a/agri-blockchain-backend/env.example
+++ b/agri-blockchain-backend/env.example
@@ -1,29 +1,36 @@
-# Environment variables for the agri-blockchain-backend
+# Environment variables for agri-blockchain-backend
 
-# Database configuration
+# Core runtime
+NODE_ENV=production
+PORT=5000
+HOST=0.0.0.0
+
+# Database
 MONGODB_URI=mongodb+srv://your_username:your_password@cluster0.mongodb.net/your_database?retryWrites=true&w=majority
 
-# Blockchain configuration
-ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/YOUR_INFURA_PROJECT_ID
-POLYGON_RPC_URL=https://polygon-rpc.com
-POLYGON_TESTNET_RPC_URL=https://rpc-mumbai.maticvigil.com # Replace with a valid URL
+# CORS and rate limiting
+CORS_ORIGIN=http://localhost:5173
+RATE_LIMIT_WINDOW=900000
+RATE_LIMIT_MAX=100
 
-# Chain IDs
-CHAIN_ID_ETHEREUM=1
-CHAIN_ID_POLYGON=137
-CHAIN_ID_POLYGON_MUMBAI=800
-
-# API keys
-GOOGLE_AI_API_KEY=your_google_ai_api_key
+# IPFS/Pinata (used by src/services/ipfsService.js)
 PINATA_API_KEY=your_pinata_api_key
 PINATA_SECRET_KEY=your_pinata_secret_key
+PINATA_JWT=your_pinata_jwt
 
-# Payment configuration
-STRIPE_KEY_ID=your_stripe_key_id
+# Stripe / Razorpay (payment service and config)
 STRIPE_KEY_SECRET=your_stripe_key_secret
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+RAZORPAY_KEY_ID=your_razorpay_key_id
+RAZORPAY_KEY_SECRET=your_razorpay_key_secret
 
-# Other configuration
-CORS_ORIGIN=http://localhost:5173
-VITE_API_URL=http://192.168.1.8:5000
-WALLET_ADDRESS=your_wallet_address
+# Blockchain (if used by price oracle or other services)
+ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/YOUR_INFURA_PROJECT_ID
+POLYGON_RPC_URL=https://polygon-rpc.com
+POLYGON_TESTNET_RPC_URL=https://rpc-amoy.polygon.technology
+CHAIN_ID_ETHEREUM=1
+CHAIN_ID_POLYGON=137
+CHAIN_ID_POLYGON_MUMBAI=80002
+
+# Frontend URL (for links in metadata etc.)
+FRONTEND_URL=http://localhost:5173
