--- a/blockchain-payment-backend/package.json
+++ b/blockchain-payment-backend/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "compile": "hardhat compile",
+    "deploy:amoy": "hardhat run scripts/deploy.js --network amoy",
+    "verify:amoy": "hardhat verify --network amoy",
+    "deploy:mumbai": "hardhat run scripts/deploy.js --network mumbai",
+    "verify:mumbai": "hardhat verify --network mumbai"
   },
   "keywords": [],
   "author": "",
@@ -25,10 +30,12 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "ipfs-http-client": "^56.0.3",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.2",
+    "multer": "^1.4.5-lts.1",
     "web3": "^4.16.0",
     "winston": "^3.17.0",
     "xss-clean": "^0.1.4"
@@ -39,5 +46,8 @@
     "jest": "^30.1.3",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
