fix: comprehensive error handling and production deployment fixes
🔧 Chrome Extension Fixes:
- Enhanced extension context detection in registerSW.ts
- Added safe Chrome API wrappers to prevent tab errors
- Skip SW registration in extension contexts

🌐 CORS Configuration Fixes:
- Enhanced backend CORS with comprehensive origin validation
- Added development and production domain patterns
- Explicit preflight OPTIONS handler with proper headers
- Support for Vercel subdomains and Render deployments

🚀 Service Worker Improvements:
- Bypass SW completely for external API requests
- Enhanced cross-origin request handling
- Prevent CORS issues by letting browser handle API calls directly
- Added API domain whitelist for bypassing

📄 Manifest & Static Asset Fixes:
- Fixed Vercel routing configuration for manifest.json
- Updated PWA manifest for agricultural marketplace branding
- Proper static asset serving with correct headers
- Added service worker headers configuration

⚡ Cold Start & API Resilience:
- Created comprehensive API client with retry logic
- Exponential backoff for 503/timeout errors
- Server warm-up function to prevent cold starts
- Enhanced error messages for user experience
- Request/response interceptors with proper logging

🔧 Environment Configuration:
- Updated .env.example with all required variables
- Added frontend URL configuration for CORS
- Blockchain and IPFS configuration templates

✨ Additional Improvements:
- Server status checking functionality
- Comprehensive error message handling
- Loading state management utilities
- Authentication token management
- Production-ready API endpoint configuration

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,33 @@
-# Vite environment variables for local development
-# Set your backend API base URLs here. These are consumed by src/apiConfig.ts and services/apiService.ts
+# Frontend Environment Variables for Agricultural Marketplace
 
+# API Configuration
 VITE_AGRI_BLOCKCHAIN_API_URL=https://agri-backend-ecci.onrender.com/api
 VITE_PAYMENT_API_URL=https://agri-payments-backend-aivg.onrender.com/api
-# Legacy/global API base used by ApiService (if not using the split URLs above)
-VITE_API_URL=https://agri-payments-backend-aivg.onrender.com
+VITE_API_URL=https://agri-backend-ecci.onrender.com
+VITE_APP_NAME=AgroChain
+VITE_APP_DESCRIPTION="Blockchain Agricultural Marketplace"
+
+# Deployment URLs (for CORS configuration)
+VITE_FRONTEND_URL=https://proto-agricultural-marketplace.vercel.app
+
+# Blockchain Configuration
+VITE_CHAIN_ID=80002
+VITE_CHAIN_NAME="Polygon Amoy Testnet"
+VITE_BLOCKCHAIN_RPC=https://rpc-amoy.polygon.technology
+VITE_CONTRACT_ADDRESS=0x...
+
+# IPFS Configuration
+VITE_PINATA_API_KEY=your_pinata_api_key
+VITE_PINATA_SECRET_API_KEY=your_pinata_secret_api_key
+
+# Security
+VITE_PRIVATE_KEY=your_private_key
+
+# Feature Flags
+VITE_ENABLE_PWA=true
+VITE_ENABLE_NOTIFICATIONS=true
+VITE_DEBUG_MODE=false
+
+# Development Settings
+VITE_MOCK_API=false
+VITE_ENABLE_CONSOLE_LOGS=true
